@@ -1,6 +1,6 @@
 task :default => [:src]
 
-VER="0.1"
+VER="0.2"
 
 srcball = "ruby-ldapserver-#{VER}.tgz"
 sourcefiles = ["README","COPYING","ChangeLog","examples/README"] + Dir["**/*.rb"]
@@ -16,4 +16,9 @@ task :src do
   rm tmpdir
 end
 
+task :tag do
+  sh "cvs update"
+  sh "cvs commit"
+  sh "cvs tag #{VER}"
+end
   
