@@ -1,6 +1,9 @@
 Using the example programs
 ==========================
 
+These servers all listen on port 1389 by default, so that they don't have to
+be run as root.
+
 Example 1: trivial server using RAM hash
 ----------------------------------------
 
@@ -36,6 +39,23 @@ simple server works by simply scanning the entire database and applying the
 filter to each entry, so it won't scale to large applications. No validation
 of DN or attributes against any sort of schema is done.
 
+Example 1a: with SSL
+--------------------
+
+In rbslapd1.rb, uncomment
+
+	:ssl_key_file=>"key.pem",
+	:ssl_cert_file=>"cert.pem",
+
+and run mkcert.rb. Since this is a self-signed certificate, you'll have to
+turn off certificate verification in the client too. For example:
+
+    $ env LDAPTLS_REQCERT="allow" ldapsearch -H ldaps://127.0.0.1:1389/
+
+Making your own CA and installing its certificate in the client, or
+generating a Certificate Signing Request and sending it to a known CA, is
+beyond the scope of this documentation.
+
 Example 2: simple LDAP to SQL mapping
 -------------------------------------
 
@@ -49,5 +69,4 @@ Example 3: preforking server
 This functions in the same way as rbslapd1.rb. However, since each query is
 answered in a separate process, the YAML file on disk is used as the master
 repository. Update operations re-write this file each time.
-
 
