@@ -1,4 +1,5 @@
 require 'socket'
+require 'openssl'
 
 module LDAPserver
 
@@ -12,7 +13,15 @@ module LDAPserver
   # - have a limit on connections from a single IP, or from a /24
   #   (to avoid the trivial DoS that the first limit creates)
   # - ACL using source IP address (or perhaps that belongs in application)
-  
+  #
+  # Options:
+  #   :port=>port number [required]
+  #   :bindaddr=>"IP address"
+  #   :listen=>number				- listen queue depth
+  #   :nodelay=>true				- set TCP_NODELAY option
+  #   :ssl_key_file=>pem, :ssl_cert_file=>pem	- enable SSL
+  #   :ssl_ca_path=>directory			- verify peer certificates
+
   def tcpserver(*args, &blk)
     opt = args.pop
     logger = opt[:logger] || $stderr
@@ -29,9 +38,24 @@ module LDAPserver
     # set queue size for incoming connections (default is 5)
     server.listen(opt[:listen]) if opt[:listen]
 
+    if opt[:ssl_key_file] and opt[:ssl_cert_file]
+      ctx = OpenSSL::SSL::SSLContext.new
+      ctx.key = OpenSSL::PKey::RSA.new(File::read(opt[:ssl_key_file]))
+      ctx.cert = OpenSSL::X509::Certificate.new(File::read(opt[:ssl_cert_file]))
+      if opt[:ssl_ca_path]
+        ctx.ca_path = opt[:ssl_ca_path]
+        ctx.verify_mode = 
+          OpenSSL::SSL::VERIFY_PEER|OpenSSL::SSL::VERIFY_FAIL_IF_NO_PEER_CERT
+      else
+        $stderr.puts "Warning: SSL peer certificate won't be verified"
+      end
+      server = OpenSSL::SSL::SSLServer.new(server, ctx)
+    end
+
     Thread.new do
-      begin
-        while session = server.accept
+      while true
+        begin
+          session = server.accept
           # subtlety: copy 'session' into a block-local variable because
           # it will change when the next session is accepted
           Thread.new(session) do |s|
@@ -43,10 +67,14 @@ module LDAPserver
               s.close
             end
           end
+        rescue OpenSSL::SSL::SSLError
+          # Problem negotiating SSL, probably connection from non-SSL client.
+          # Ignore.
+        rescue Interrupt
+          # This exception can be raised to shut the server down
+          server.close if server and not server.closed?
+          break
         end
-      # This is the 'server shutdown' exception
-      rescue Interrupt
-        server.close if server and not server.closed?
       end
     end
   end
